# fluid-simulation

./: .gitignore  README.md
cpp/: FLUID_README.md
cpp/include/FluidSimulation/: FluidSimulator.hpp  GridSolver.hpp  MACMethod.hpp  PressureCorrection.hpp  PressureFree.hpp
cpp/src/: FluidSimulator.cpp  GridSolver.cpp  MACMethod.cpp  PressureCorrection.cpp  PressureFree.cpp  PressurePoisson.cpp  main.cpp
py/: models_v2.py  pyproject.toml  requirements.txt
py/fluid_simulation/: cnn.py  combine_csv_data.py  datasets_v2.py  img_utils.py  models_v2.py  simulate_fluids_with_nn.py  train_models.py  utils.py
py/fluid_simulation/gat/: gat.py  gat_torch_geometric.py  gat_torch_scatter.py
py/fluid_simulation/notebooks/: combined-trainer.ipynb  gat.ipynb  gnn-visuals.ipynb  learn-movement.ipynb
