[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluid-simulation"
version = "0.1.0"
description = "A short description of your project"
readme = "README.md"
authors = [{ name = "Zahid P", email = "8601964+ZahidP@users.noreply.github.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

keywords = []
requires-python = ">=3.8"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = ["pytest", "flake8"]

[tool.setuptools.packages.find]
include = ["fluid_simulation*"]
exclude = ["models*", "gifs*"]

[project.urls]
Homepage = "https://github.com/ZahidP/fluid-simulation"


